--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 .cabecalho {
 background-color: #424e61;
 color: white;
@@ -10,4 +15,5 @@ width: 20%;
 
 .cabecalho-lista-item{
     display: inline-block;
+    margin: 0 16px;
 }
