--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ background-color: #424e61;
 color: white;
   display: flex;
   justify-content: space-around;
+  align-items: center;
+  pedding: 24px 0;
 }
 .cabecalho-imagem{
 width: 20%;
@@ -16,4 +18,5 @@ width: 20%;
 .cabecalho-lista-item{
     display: inline-block;
     margin: 0 16px;
+    font-size: 24px
 }
