--- a/style.css
+++ b/style.css
@@ -27,5 +27,5 @@ width: 20%;
 }
 
 .escola{
-  background-image: linear-gradient(#424e61,#4EBFE9);
+  background-image: linear-gradient(#424E61,#4EBFE9);
 }
