--- a/style.css
+++ b/style.css
@@ -30,4 +30,9 @@ width: 20%;
   background-image: linear-gradient(#424E61,#4EBFE9);
   color: white;
   display: flex;
+  justify-content: center;
+}
+
+.escola-div-conteudo{
+  width: 35%;
 }
