--- a/style.css
+++ b/style.css
@@ -1,17 +1,26 @@
-header{
-            background-color: #424e61;
-            color: white;
-}
-
-
 .cabecalho {
   background-color: #424e61;
   color: white;
   display: flex;
+  flex-direction: row;
   justify-content: space-around;
-  align-items: center;
-   pedding: 24px  0;
+  margin: 24px 0;
 }
+
+.cabecalho {
+  width: 20%;
+  }
+
+  .cabecalho-lista-item {
+  display: inline-block;
+  margin: 0 16px;
+  }
+
+  .escola-imagem{
+   width: 25%;
+}
+
+
  .cabecalho-imagem{
   width: 20%;
  }
