--- a/style.css
+++ b/style.css
@@ -7,26 +7,28 @@
   margin: 24px 0;
 }
 
-.cabecalho {
-  width: 20%;
-  }
-
-  .cabecalho-lista-item {
-  display: inline-block;
-  margin: 0 16px;
-  }
-
-  .escola-imagem{
-   width: 25%;
+.cabecalho-imagem{
+  width: 20%
 }
 
+.cabecalho-lista-item{
+  display: inline-block;
+  margin: 0 16px;
+}
 
- .cabecalho-imagem{
-  width: 20%;
- }
+.escola-imagem{
+  width: 25%;
+}
 
- .cabecalho-lista-item{
-       display: inline-block;
-       margin: 0 16px;
-       font-size: 24px;
- }
+.escola {
+  background-image: -moz-linear-gradient(#424e61, #4ebfe9);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.escola-div-conteudo {
+  width: 35%;
+  
+}
