--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
   }
 
   .escola {
-    background-image: -moz-linear-gradient(#424e61, #4ebfe9);
+    background-image: -linear-gradient(#424e61, #4ebfe9);
     color: white;
     display: flex;
     justify-content: center;
