--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin: 24px 0;
+    padding: 24px 0;
   }
 
   .cabecalho-imagem {
