--- a/style.css
+++ b/style.css
@@ -3,9 +3,13 @@
     padding: 0;
   }
 
-  .cabecalho {
 
-    background-color: #424e61;
+  body{
+    font-family: "Roboto", sans-serif;
+  }
+
+  .cabecalho {
+    background-color: #424E61;
     color: white;
     display: flex;
     flex-direction: row;
@@ -28,7 +32,7 @@
   }
 
   .escola {
-    background-image: -linear-gradient(#424e61, #4ebfe9);
+    background-image: -linear-gradient(#424E61, #4eBFE9);
     color: white;
     display: flex;
     justify-content: center;
