--- a/style.css
+++ b/style.css
@@ -41,5 +41,14 @@
 
   .escola-div-conteudo {
     width: 35%;
+  }
 
+  .estudante-imagem{
+    width: 120px;
+  }
+  .estudante-icone{
+    width: 24px;
+  }
+  .estudante-div{
+    align-items: center;
   }
