--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
   .cabecalho {
     background-color: #424E61;
-    color: rgb(255, 255, 255);
+    color: blue;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
