--- a/style.css
+++ b/style.css
@@ -1,75 +1,67 @@
-{
-    margin: 0;
-    padding: 0;
-  }
+* {
+  margin: 0;
+  padding: 0;
+}
 
-
-  body{
-    font-family: "Roboto", sans-serif;
-  }
-
-  .cabecalho {
-    background-color: #424E61;
-    color: blue;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    padding: 24px 0;
-  }
-
-  .cabecalho-imagem {
-    width: 20%
-  }
-
-  .cabecalho-lista-item {
-    display: inline-block;
-    margin: 0 16px;
-    font-size: 24px;
-  }Sobre a Escola
-  A escola alura foi fundada em 2010 com o objetivo de ensinar pensamento computacional atravez de programacao
-  
-  A turma mais famosa e a serie segundo A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mais que entrega excelentes resultados!
-  
-  ￼
-  Quem são os nossos estudantes?
-  ￼
-  Maria
-  
-
-  .escola-imagem {
-    width: 25%;
-  }
-
-  .escola {
-    background-image: -linear-gradient(#424E61, #4eBFE9);
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .escola-div-conteudo {
-    width: 35%;
-  }
-
-  .estudante-imagem{
-    width: 120px;
-  }
-  .estudante-icone{
-    width: 24px;
-  }
-  .estudante-div{
-    align-items: center ;
-  }
-
-
-
-
-
+body {
+  font-family: "Poppins", sans-serif;
 
 }
 
-.estudantes-todos{ 
-  display: grid;
- grid-template-columns: 20% 20% 20% 20% 20%
+.cabecalho {
+  background-color: #424E61;
+  color: white;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 24px 0;
+}
 
+.cabecalho-imagem {
+  width: 20%;
+}
+
+.cabecalho-lista-item {
+  display: inline-block;
+  margin: 0 16px;
+  font-size: 24px;
+}
+
+.escola-imagem {
+  width: 25%;
+}
+
+.escola {
+  background-image: linear-gradient(#424E61, #4EBFE9);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.escola-div-conteudo {
+  width: 35%;
+}
+
+.estudante-imagem {
+  width: 120px;
+}
+
+.estudante-icone {
+  width: 24px;
+}
+
+.estudante-div {
+  text-align: center;
+}
+
+.estudante-titulo {
+  text-align: center;
+  padding: 50px 0;
+}
+
+.estudantes-todos {
+  display: grid;
+  grid-template-columns: 20% 20% 20% 20% 20%;
+
+}
